--- a/Amazone/Dockerfile
+++ b/Amazone/Dockerfile
@@ -1,6 +1,11 @@
-FROM quay.io/lyfe00011/test:beta
+FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/Thilina30599/Newbot /root/WhatsAsenaDuplicated
-WORKDIR /root/WhatsAsenaDuplicated/
+RUN git clone https://github.com/Thilina30599/Newbot /root/ales
+WORKDIR /root/ales/
+RUN git clone https://github.com/tenuh/Config
+RUN git clone https://github.com/Thilina30599/Angela-x
+ENV TZ=Europe/Istanbul
+RUN npm install supervisor -g
 RUN yarn install --no-audit
+
 CMD ["node", "bot.js"]
